<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DisplayCalculateActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            android:text="@string/result_title" android:textSize="30sp"/>
    <TextView
            android:text="@string/result_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/resultText" android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.494" android:textSize="12sp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resultText" android:text="@string/result" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:textSize="14sp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:id="@+id/description" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="80dp" android:text="@string/result_description"
            app:layout_constraintEnd_toStartOf="@+id/IMC" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:text="@string/imc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/IMC"
            app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginTop="80dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.958" app:layout_constraintBaseline_toBaselineOf="@+id/description"/>
</android.support.constraint.ConstraintLayout>