<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView" android:text="@string/main_title"
            android:textSize="36sp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/editText" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
            android:textIsSelectable="true" android:hint="@string/main_peso"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:id="@+id/editText2" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/main_estatura"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/button" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/editText2" android:text="@string/main_button"
            android:onClick="sendCalculate"/>
</android.support.constraint.ConstraintLayout>